LU-2657 recovery: don't delete objects

In mds_lov_update_objids(), when an data object id gap is
detected during recovery, it'll delete all the objects in
the gap, which isn't quite correct, because we can't guarantee
that the id is always increased by the transno order,
furthermore, that could also bring big trouble when the
lov_objid file was removed manually (to rebuild the corrupted
lov_objid file).

Fix type defect in filter_recov_log_unlink_cb(), where
oa->o_id should be increased by each loop cycle.

Signed-off-by: Niu Yawei <yawei.niu@intel.com>
Change-Id: I47247a584da10b1434bf7cb24f606073c6afa903
Reviewed-on: http://review.whamcloud.com/5137
Tested-by: Hudson
Tested-by: Maloo <whamcloud.maloo@gmail.com>
Reviewed-by: Mike Pershin <mike.pershin@intel.com>
Reviewed-by: Johann Lombardi <johann.lombardi@intel.com>